--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,6 +23,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style type="text/css">
+      html, body, #root {
+          height: 100%;
+          margin: 0px;
+      }
+    </style>
     <title>Method Base Management System UI</title>
   </head>
   <body>
